--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1440,7 +1440,7 @@ $color-secondary: #1abc9c; //for hover, span, etc.
     font-size: 27px;
     margin-right: 15px;
     &:last-child{
-        margin-right: 0;
+        margin-right: 30px;
     }
     .fa-facebook{color: #374f83}
     .fa-twitter{color: #0792c7}
@@ -1451,7 +1451,7 @@ $color-secondary: #1abc9c; //for hover, span, etc.
     .fa-instagram{color: #486e8d}
     .fa-pinterest{color: #aa2229}
     .fa-flickr{color: #d30873}
-    
+
 }
 
 /*=====  End of Footer  ======*/
