--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -116,7 +116,7 @@ $color-secondary: #1abc9c; //for hover, span, etc.
         color: inherit;
     }
     .title{
-        font-style: 56px;
+        font-size: 56px;
         margin-bottom: 38px;
         text-transform: initial;
     }
@@ -384,6 +384,7 @@ $color-secondary: #1abc9c; //for hover, span, etc.
     box-sizing: border-box;
     box-shadow: 0 0 2px 1px #e1e2e4;
     position: relative;
+    margin: 0 30px 30px 0;
     &:hover{
         .provide-item-title{
             font-weight: bold;
@@ -500,11 +501,15 @@ $color-secondary: #1abc9c; //for hover, span, etc.
 }
 
 .features-video{
-    position: relative;
-    min-width: 556px;
-    height: 314px;
+    display: flex;
+    align-items: center;
     margin-right: 125px;
-    background: url('./images/video-image.png') no-repeat;
+}
+
+.video{
+    width: 566px;
+    height: 314px;
+    display:inline-block; 
 }
 
 .features-video-content{
@@ -765,6 +770,8 @@ $color-secondary: #1abc9c; //for hover, span, etc.
 }
 
 .content-block{
+    display: flex;
+    flex-direction: column;
     max-width: 533px;
     padding: 0 15px;
 }
@@ -820,7 +827,7 @@ $color-secondary: #1abc9c; //for hover, span, etc.
     color: #afb0b3;
     text-decoration: none;
     text-transform: capitalize;
-    background-color: #fff;
+    background-color: #f9f9f9;
     cursor: pointer;
     transition: 0.3s;
     &:hover{
@@ -854,6 +861,7 @@ $color-secondary: #1abc9c; //for hover, span, etc.
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .opinion-item{
@@ -892,6 +900,8 @@ $color-secondary: #1abc9c; //for hover, span, etc.
 }
 
 .subscribe-content-wrap{
+    display: flex;
+    flex-direction: column;
     padding-left: 110px;
     width: 50%;
     box-sizing: border-box;
@@ -1125,6 +1135,7 @@ $color-secondary: #1abc9c; //for hover, span, etc.
     font-size: 41px;
     padding: 15px 15px 15px 20px;
     border-right: 1px solid #fff;
+    box-sizing: border-box;
 }
 
 .download-btn-link{
@@ -1230,10 +1241,12 @@ $color-secondary: #1abc9c; //for hover, span, etc.
 
 .partners{
     background-color: #f9f9f9;
-    padding: 80px 0 70px 0;
+    padding: 80px 15px 70px 15px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 
 .partners-item{
@@ -1254,7 +1267,7 @@ $color-secondary: #1abc9c; //for hover, span, etc.
 =============================================*/
 
 .contact-us{
-    padding: 120px 0 50px 0;
+    padding: 120px 15px 50px 15px;
 }
 
 .contact-form{
@@ -1458,15 +1471,8 @@ $color-secondary: #1abc9c; //for hover, span, etc.
 
 
 
-
-
-
-
-
-
-
-
-
+/* import media */
 
 
 @import'./mobile.scss';
+@import'./tablet.scss';
