--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -382,6 +382,9 @@ $color-secondary: #1abc9c; //for hover, span, etc.
     .container{
         margin: 0 5%;
     }
+    .row-wrap-items{
+        max-width: 1300px;
+    }
 }
 
 .provide-item{
@@ -588,12 +591,14 @@ $color-secondary: #1abc9c; //for hover, span, etc.
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .works-gallery-item{
     position: relative;
-    width: 25%;
+    min-width: 25%;
     height: 266px;
+    transition: 0.3s;
     &:nth-child(1){
         background-color: #fdbd4f;
     }
@@ -618,16 +623,24 @@ $color-secondary: #1abc9c; //for hover, span, etc.
     &:nth-child(8){
         background-color: #ffc301;
     }
-    &:hover{
+    &:hover{    
         .gallery-item-hover{
             transition: 0.3s;
             opacity: 1;
             transform: translateY(-70px);
+            background-color: inherit;
         }
         .gallery-item-description{
+            transition: 0.3s;
             opacity: 1;
         }
     }
+}
+
+.gallery-item-image{
+    display: inline-block;
+    margin: auto;
+    max-width: 100%;
 }
 
 
@@ -635,11 +648,12 @@ $color-secondary: #1abc9c; //for hover, span, etc.
     height: 100%;
     transition: 0.3s;
     opacity: 0;
-    background: url(./images/gallery-item-bg.png) no-repeat;
-    background-position: center;
+    display: flex;
+    overflow: hidden;
 }
 
 .gallery-item-description{
+    transition: 0.3s;
     opacity: 0;
     position: absolute;
     bottom: 0;
@@ -662,6 +676,7 @@ $color-secondary: #1abc9c; //for hover, span, etc.
 }
 
 .tags-wrap{
+    position: absolute;
     display: flex;
     flex-direction: row;
     padding: 20px;
