fix works gallery image effect

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -592,6 +592,7 @@ $color-secondary: #1abc9c; //for hover, span, etc.
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    width: 100%;
 }
 
 .works-gallery-item{
